# FastNet

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  test.bat
cmake/: FastNetConfig.cmake.in
docs/: API_REFERENCE.md  COOKBOOK.md  RELEASE_STATUS.md  USER_GUIDE.md  VALIDATION_CHECKLIST.md
examples/: BenchmarkCommon.h  BenchmarkTls.h  CMakeLists.txt  benchmark_matrix_runner.cpp  http_connect_burst_benchmark.cpp  http_get_client.cpp  http_loopback_benchmark.cpp  http_static_server.cpp  tcp_connect_burst_benchmark.cpp  tcp_echo_server.cpp  tcp_loopback_benchmark.cpp  udp_loopback_benchmark.cpp  websocket_connect_burst_benchmark.cpp  websocket_echo_server.cpp  websocket_loopback_benchmark.cpp
include/FastNet/: BenchmarkUtils.h  Config.h  Configuration.h  ConnectionManager.h  Error.h  EventPoller.h  FastBuffer.h  FastNet.h  FlatHashMap.h  HttpClient.h  HttpCommon.h  HttpParser.h  HttpServer.h  IoService.h  Logger.h  MemoryPool.h  MpscQueue.h  MpscQueue.h.20260501_111431.bak  PerformanceMonitor.h  SSLContext.h  SharedSessionTypes.h  SocketWrapper.h  SpinLock.h  TcpClient.h  TcpConnectionPool.h  TcpServer.h  Timer.h  UdpSocket.h  WebSocketClient.h  WebSocketProtocol.h  WebSocketServer.h  base64.h
lib/: FastNet.exp  FastNetd.exp
src/: BenchmarkUtils.cpp  Configuration.cpp  ConnectionManager.cpp  Error.cpp  EventPoller.cpp  EventPoller.cpp.clean  FastNet.cpp  HttpClient.cpp  HttpParser.cpp  HttpServer.cpp  IoService.cpp  IoUringPoller.cpp  IoUringPoller.h  Logger.cpp  PerformanceMonitor.cpp  SSLContext.cpp  SocketWrapper.cpp  TcpClient.cpp  TcpConnectionPool.cpp  TcpServer.cpp  Timer.cpp  UdpSocket.cpp  WebSocketClient.cpp  WebSocketProtocol.cpp  WebSocketServer.cpp  WindowsIocpTransport.cpp  WindowsIocpTransport.h  base64.cpp
test/: CMakeLists.txt  TestSupport.h  test_base64.cpp  test_configuration.cpp  test_connection_manager.cpp  test_error_model.cpp  test_http_client_request.cpp  test_http_client_streaming.cpp  test_http_loopback.cpp  test_http_parser.cpp  test_http_utilities.cpp  test_network_core.cpp  test_runtime_components.cpp  test_tcp_transport.cpp  test_tls_transport.cpp  test_udp_socket.cpp  test_websocket_client_options.cpp  test_websocket_loopback.cpp  test_websocket_protocol.cpp  test_websocket_server_options.cpp
